--- a/src/app/grid/grid.component.html
+++ b/src/app/grid/grid.component.html
@@ -9,7 +9,7 @@
     <div class="buttonGroup">
         <button class="button" [disabled]="buttonDisabled" (click)="solveGrid()">Solve With A*</button>
         <button class="button clear" [disabled]="buttonDisabled" (click)="cleanGrid()">Clear Board</button>
-        <button class="button clear" [disabled]="buttonDisabled" (click)="clearSolution()">Clear Path</button>
+        <button class="button clear" [disabled]="buttonDisabled" (click)="clearSolution()">Clear Walls</button>
     </div>
     <div class="buttonGroup">
         <button class="button" [disabled]="buttonDisabled" (click)="solveGridWithDjikstras()">Solve With Djikstra</button>
