--- a/src/app/grid/grid.component.html
+++ b/src/app/grid/grid.component.html
@@ -7,7 +7,7 @@
         </td>
     </tr>
     <div class="buttonGroup">
-        <button class="button" [disabled]="buttonDisabled" (click)="solveGrid()">Solve With A*</button>
+        <button class="button" [disabled]="buttonDisabled" (click)="solveGridWithAStar()">Solve With A*</button>
         <button class="button clear" [disabled]="buttonDisabled" (click)="cleanGrid()">Clear Board</button>
         <button class="button clear" [disabled]="buttonDisabled" (click)="clearSolution()">Clear Walls</button>
     </div>
