--- a/src/app/presets/presets.component.html
+++ b/src/app/presets/presets.component.html
@@ -1,1 +1,4 @@
-<button class="button preset" (click)="setPreset(1)">Preset 1</button>
+<div class="buttonGroup">
+    <button class="button preset" (click)="setPreset(1)">Preset 1</button>
+    <button class="button preset" (click)="setPreset(2)">Preset 2</button>
+</div>
