--- a/src/app/presets/presets.component.html
+++ b/src/app/presets/presets.component.html
@@ -1,4 +1,4 @@
-<div class="buttonGroup">
-    <button class="button preset" (click)="setPreset(1)">Preset 1</button>
-    <button class="button preset" (click)="setPreset(2)">Preset 2</button>
+<div class="row">
+    <button class="btn btn-warning col-md-4 mx-1 my-1" (click)="setPreset(1)">Preset 1</button>
+    <button class="btn btn-warning col-md-4 mx-1 my-1" (click)="setPreset(2)">Preset 2</button>
 </div>
